# DB25-sql-tokenizer

./: .gitignore  CMakeLists.txt
include/: keyword_lookup.hpp  simd_architecture.hpp  simd_tokenizer.hpp
src/: simd_tokenizer.cpp
test/: test_block_comment.cpp  test_delimited_identifier.cpp  test_lexer_invariants.cpp  test_number_literals.cpp
tools/: extract_keywords.cpp
